Fix Readme, finally

--- a/README
+++ b/README
@@ -13,5 +13,5 @@ mobile, netcat, vim and perl from SL4A on a Toshiba AC100 travelling in a train
 from Bangalore to Hyderabad for a wedding, I wrote up this webserver to allow me
 to view perldoc locally.
 
-This project is release under the HIRE ME/PAY ME License, the text for which is
+This project is released under the HIRE ME/PAY ME License, the text for which is
 available in the LICENSE file.
